<resources>
    <string name="app_name">AP Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="tracking_channel">Default Tracking Channel</string>
    <string name="rafi_host_address">Rafi Host Address</string>
    <string name="save">Save</string>
    <string name="visit_settings_to_get_started">Visit settings to get started.</string>
    <string name="add_new_item">Add New Tracked Item</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_item">Edit Tracked Item</string>
    <string name="edit">Edit</string>
    <string name="focus">Focus</string>
    <string name="whats_new">What\'s New</string>
    <string name="name">Name</string>
    <string name="tracking_channel_optional">Tracking Channel (optional)</string>
    <string name="tracking_style">Tracking Style</string>
    <string name="toggle">Toggle</string>
    <string name="single">Single</string>
</resources>
